# raylib-project-template-with-doctest

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: factorial.h
src/: CMakeLists.txt  factorial.cpp  windows.cpp
tests/: CMakeLists.txt  factorial_tests.cpp
